examples/tests/valid/benchmarks/jsii_small.w
bring "jsii-code-samples" as stuff;