examples/tests/invalid/bring_jsii.w
bring "jsii-code-samples";
//    ^^^^^^^^^^^^^^^^^^^ Error: bring "jsii-code-samples" must be assigned to an identifier